Revert "hoping this fixes spacing issues"
This reverts commit aa9abe90d2cb43633fd411d627c79c27a1d9cfd4.

--- a/static/css/timetable/partials/advising_schedule.scss
+++ b/static/css/timetable/partials/advising_schedule.scss
@@ -165,18 +165,12 @@
   }
 
   .advisee-container {
-    clear: both;
-    color: grey;
-    font-size: 2rem;
-    font-weight: 600;
-    padding: 10px;
-    position: relative;
-    border-bottom: $gddd solid 1px;
+    font-size: 1rem;
 
-    &:hover {
-      color: $primary-navy;
-      background-color: $geee;
-      cursor: pointer;
+    &::after {
+      background-color: #2b406e;
+      position: absolute;
+      width: 100%
     }
   }
 
